--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,16 @@
-# production
+# THIS IS AN AUTO-GENERATED FILE. DO NOT EDIT!
+# production requirements
 google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+pytconf
+pylogconf
+# dev requirements
+pyclassifiers
+pypitools
+pydmt
+Sphinx
+# test requirements
+pylint
+pytest
+pyflakes
