--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ httplib2
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
+gdata-python3
 pytconf
 pylogconf
 # dev requirements
