--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -8,5 +8,9 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+      - name: Install python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Lint Code Base
         uses: github/super-linter@v2.0.0
