--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install python dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r requirements.txt
       - name: Lint Code Base
         uses: github/super-linter@v2.0.0
