--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,3 +13,5 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install setuptools
           python3 -m pip install -r requirements.txt
+      - name: Lint Code Base
+        uses: github/super-linter@v2.0.0
