--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 # THIS IS AN AUTO-GENERATED FILE. DO NOT EDIT!
+# production requirements
+httplib2
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
+gdata-python3
+pytconf
+pylogconf
 # dev requirements
 pyclassifiers
 pypitools
