--- a/.pylintrc
+++ b/.pylintrc
@@ -569,7 +569,7 @@ min-similarity-lines=4
 [REFACTORING]
 
 # Maximum number of nested blocks for function / method body
-max-nested-blocks=5
+max-nested-blocks=8 # MV
 
 # Complete name of functions that never returns. When checking for
 # inconsistent-return-statements if a never returning function is called then
