--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,71 @@
 alabaster==0.7.16
-astroid==3.1.0
+astroid==3.2.2
 attrs==23.2.0
-Babel==2.14.0
-black==24.3.0
+Babel==2.15.0
 cachetools==5.3.3
-certifi==2024.2.2
-cffi==1.16.0
+certifi==2024.6.2
 charset-normalizer==3.3.2
-click==8.1.7
-coverage==7.4.4
-cryptography==42.0.5
+coverage==7.5.3
 dill==0.3.8
-docutils==0.20.1
-ecdsa==0.18.0
+docutils==0.21.2
+ecdsa==0.19.0
 flake8==7.0.0
 gdata-python3==3.0.1
 gitdb==4.0.11
-GitPython==3.1.42
-google-api-core==2.17.1
-google-api-python-client==2.122.0
-google-auth==2.28.2
+GitPython==3.1.43
+google-api-core==2.19.0
+google-api-python-client==2.131.0
+google-auth==2.29.0
 google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
 googleapis-common-protos==1.63.0
 httplib2==0.22.0
-idna==3.6
+idna==3.7
 imagesize==1.4.1
-importlib_metadata==7.0.2
 iniconfig==2.0.0
 isort==5.13.2
-jaraco.classes==3.3.1
-jeepney==0.8.0
-Jinja2==3.1.3
-jsonschema==4.21.1
+Jinja2==3.1.4
+jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
-keyring==24.3.1
-logging-tree==1.9
-lxml==5.1.0
-Mako==1.3.2
-markdown-it-py==3.0.0
+logging_tree==1.10
+lxml==5.2.2
+Mako==1.3.5
 MarkupSafe==2.1.5
 mccabe==0.7.0
-mdurl==0.1.2
-more-itertools==10.2.0
-mypy==1.9.0
+mypy==1.10.0
 mypy-extensions==1.0.0
-nh3==0.2.15
 oauthlib==3.2.2
 packaging==24.0
-pathspec==0.12.1
-pkginfo==1.10.0
-platformdirs==4.2.0
-pluggy==1.4.0
+platformdirs==4.2.2
+pluggy==1.5.0
+proto-plus==1.23.0
 protobuf==4.25.3
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pyclassifiers==0.0.12
 pycodestyle==2.11.1
-pycparser==2.21
-pydmt==0.3.5
+pydmt==0.3.16
 pyfakeuse==0.0.8
 pyflakes==3.2.0
-Pygments==2.17.2
-pygooglehelper==0.0.5
-pylint==3.1.0
+Pygments==2.18.0
+pygooglehelper==0.0.6
+pylint==3.2.2
 pylogconf==0.0.37
 pymakehelper==0.0.28
-pymultigit==0.0.91
 pyparsing==3.1.2
-pypitools==0.0.77
 pytconf==0.1.14
-pytest==8.1.1
-pytest-cov==4.1.0
+pytest==8.2.1
+pytest-cov==5.0.0
 PyYAML==6.0.1
-readme_renderer==43.0
-referencing==0.34.0
-requests==2.31.0
-requests-oauthlib==1.4.0
-requests-toolbelt==1.0.0
-rfc3986==2.0.0
-rich==13.7.1
-rpds-py==0.18.0
+referencing==0.35.1
+requests==2.32.3
+requests-oauthlib==2.0.0
+rpds-py==0.18.1
 rsa==4.9
-SecretStorage==3.3.3
 six==1.16.0
 smmap==5.0.1
 snowballstemmer==2.2.0
-Sphinx==7.2.6
+Sphinx==7.3.7
 sphinxcontrib-applehelp==1.0.8
 sphinxcontrib-devhelp==1.0.6
 sphinxcontrib-htmlhelp==2.0.5
@@ -95,11 +74,9 @@ sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
 termcolor==2.4.0
 tlslite-ng==0.7.6
-tomlkit==0.12.4
-twine==5.0.0
-typing_extensions==4.10.0
+tomlkit==0.12.5
+typing_extensions==4.12.1
 uritemplate==4.1.1
 urllib3==2.2.1
 venv-run==0.2.0
 yattag==1.15.2
-zipp==3.18.1
