--- a/requirements.thawed.txt
+++ b/requirements.thawed.txt
@@ -1,8 +1,10 @@
 # THIS IS AN AUTO-GENERATED FILE. DO NOT EDIT!
 gdata-python3
+hatch
 httplib2
 mypy
 pyclassifiers
+pycmdtools
 pydmt
 pygooglehelper
 pylint
