--- a/requirements.txt
+++ b/requirements.txt
@@ -67,9 +67,10 @@ protobuf==6.31.1
 ptyprocess==0.7.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
+pyclassifiers==0.0.20
 pycmdtools==0.0.85
 pycparser==2.22
-pydmt==0.3.24
+pydmt==0.3.26
 pyfakeuse==0.0.9
 Pygments==2.19.2
 pygooglehelper==0.0.8
